--- a/index.html
+++ b/index.html
@@ -60,12 +60,50 @@
                 </div>
                 </section>
             </div>
-            <div class="content"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis laudantium quasi minus aut, voluptate numquam nobis ipsa ex error natus at vel repudiandae nisi veniam doloremque quidem reiciendis eveniet consequatur molestias eos, necessitatibus deleniti facilis molestiae labore. Ad dolore velit rerum deleniti quos sunt labore dolorum assumenda? Nobis tempora voluptas molestiae distinctio iusto quaerat reprehenderit numquam inventore deleniti amet officia, rem aut voluptate. Assumenda ea corporis minima vel ut sint, magni officia amet rerum distinctio modi perferendis! Ullam quas repudiandae inventore, distinctio incidunt, quam minima atque expedita magni modi fuga. Quod autem officiis facilis aliquam officia commodi perspiciatis nulla, earum praesentium vero odit at enim reiciendis atque, ipsa libero ipsum voluptate nisi? Iste earum mollitia sequi quibusdam alias quod doloremque rerum deleniti, maxime nisi unde nam? Dolorum animi esse pariatur minus fuga, fugiat consequuntur voluptatum cumque natus minima soluta cupiditate explicabo! Corporis, quo quia, sapiente perspiciatis placeat in tempora magni necessitatibus sunt blanditiis ullam nemo veniam autem ipsam nihil similique voluptatibus animi doloribus dignissimos error quisquam dolores harum fugiat magnam? Repellendus, assumenda hic quisquam cumque consequatur ea? Asperiores exercitationem ipsa ad praesentium quis blanditiis dolorem error dignissimos sapiente culpa laboriosam at reprehenderit necessitatibus sit tempore architecto repudiandae sunt maiores nisi, expedita perspiciatis eveniet? Fugit vitae atque reprehenderit veniam sapiente repellendus amet ipsa, dignissimos a. Mollitia delectus, reprehenderit eveniet reiciendis fuga facere eos architecto blanditiis aliquid quaerat deleniti esse, voluptates et cum laboriosam libero ipsa numquam error totam ab minus! Saepe eius facilis iure impedit? Reprehenderit quidem eaque dolorem nulla amet quis deserunt dolore quas mollitia accusantium id expedita repudiandae aspernatur nemo ipsum ut voluptas ducimus iure, optio beatae temporibus nesciunt vero vel iusto. Cupiditate repudiandae minima sunt mollitia officiis dolor quo voluptas pariatur aut ratione sequi deleniti minus cumque doloribus molestias excepturi quod, enim obcaecati tempore sapiente cum ab esse nobis? Accusamus nam, soluta officia alias eveniet quam exercitationem in aut vel. Enim autem provident assumenda! Nobis quibusdam quia reprehenderit facere numquam, quidem suscipit aperiam, similique cupiditate harum, aspernatur sint illum cum. Eligendi reiciendis ipsam quam delectus nostrum temporibus officiis vel impedit illo iure, ratione minima repellat, provident qui iste minus quo sunt enim commodi! Adipisci eligendi tempore quis voluptatem magni velit provident nostrum optio, porro rerum! Fuga, maiores beatae vitae tempora eius sit, quod aut facere possimus totam pariatur quam facilis delectus cupiditate architecto labore quas nemo exercitationem? Ratione optio id ex autem molestiae? Nobis hic ipsa molestias provident?</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium vero asperiores eaque corrupti sit voluptas sapiente? Aliquam similique repellat quod facere obcaecati voluptates, dolore eos enim fugit ipsum placeat autem exercitationem at et amet quisquam ducimus rem nam consequuntur dolorem doloremque eligendi. Maiores, neque sint! Atque quas ab tenetur? Repellendus officia atque sit voluptates minima tenetur, pariatur labore et. Esse aliquid provident quam tempore quo. Distinctio alias exercitationem ad. Hic fugit illo aspernatur facilis provident consequatur repellat obcaecati. Aut, obcaecati dolor recusandae illo eos, non quae voluptas illum veniam, sit quibusdam voluptate ipsa in repellat et hic placeat facere! Aut quod eum animi magnam impedit. Minus eos iste laborum soluta corporis quos quibusdam non totam expedita vitae eveniet suscipit fuga asperiores voluptas porro voluptatibus ipsum optio maxime, necessitatibus temporibus harum! Assumenda placeat perferendis rerum sapiente saepe enim, veniam iste reprehenderit voluptate, omnis fugit deserunt laudantium aperiam ratione, sint quibusdam magni cum accusantium? Earum, molestias enim. Tempore itaque, soluta ea maxime corporis architecto ab vel explicabo inventore. Repellat dolores iste ducimus, expedita modi asperiores iusto fuga officiis delectus quasi. Eius unde dolorum pariatur, neque magni et porro excepturi sapiente officia error ducimus quisquam repudiandae omnis? Quas facere repellat impedit veniam possimus doloremque, illum laudantium minima delectus consequatur voluptas unde voluptates cupiditate iure blanditiis molestiae nemo! Sed animi reiciendis dolore ea quis vel beatae alias dolor repudiandae explicabo ab, porro voluptates ex harum nam ducimus id tempora amet. Commodi mollitia illum maxime rerum iure pariatur. Voluptatem dolorum dolorem quis aperiam quisquam necessitatibus voluptas odit, maxime quos, ducimus laborum illo iure earum aut distinctio cupiditate. Rerum dolore architecto mollitia sint libero eaque perferendis praesentium hic. Numquam alias et asperiores illo sint, eum, placeat, vitae officia eos iusto modi. Fugit nostrum omnis ab magnam quia eum qui vel laudantium perferendis praesentium, ipsum porro, similique, cum vitae delectus placeat. Unde, eius! Facere dicta sequi sit rem explicabo corrupti accusantium reiciendis, animi saepe optio. Quidem blanditiis aspernatur eum libero accusamus inventore eos soluta? Sequi similique sit laboriosam adipisci itaque placeat illum explicabo, reprehenderit quaerat ipsam deserunt enim esse ducimus porro. Corporis similique aliquam unde tempore necessitatibus recusandae laboriosam veritatis blanditiis sequi provident ipsa doloribus omnis consectetur totam deserunt error accusantium pariatur eos quidem illum, molestiae impedit aspernatur, libero sint. Consequatur facilis alias ex non, explicabo nisi possimus beatae, in deleniti reiciendis corrupti quam soluta similique quidem voluptas odit, dolore quo. Aliquid unde fugiat inventore quo obcaecati eveniet accusamus sed, iusto labore consequatur recusandae, modi similique fugit necessitatibus quam corrupti. Ut nobis maiores recusandae ex saepe pariatur et eos aliquam dolores aspernatur cumque itaque, placeat sapiente, animi reprehenderit laudantium, ipsa doloribus. Harum, expedita consequuntur ut nostrum inventore debitis? Eaque asperiores quos debitis quae amet repellendus ipsa laboriosam provident ab ut omnis porro, similique quas voluptate eligendi veniam, quod molestias quidem voluptas quam. Facere eum impedit aliquam, rerum quidem tempora nihil, quaerat at odio facilis similique porro dolore, repellat distinctio. Reprehenderit alias deleniti optio placeat. Eaque, nulla. Temporibus accusamus veniam hic commodi impedit atque veritatis itaque mollitia iusto necessitatibus. Suscipit, vel porro dolorum, voluptatibus odio cumque, cupiditate quidem molestiae molestias impedit sunt dolor ea rerum enim libero placeat nesciunt sequi ab facilis voluptatum aperiam! Molestias mollitia quia quisquam? Consequatur excepturi quo voluptate explicabo sit deserunt doloremque cupiditate, esse ad fugit impedit, eaque deleniti neque odit, placeat tempore alias eligendi omnis nemo debitis ut. Delectus, voluptates quod. Eius nihil cumque architecto magnam pariatur, optio, laudantium obcaecati assumenda possimus sint asperiores debitis ipsa excepturi repellat consectetur voluptatibus. Assumenda in dolorem perspiciatis ut quos, nihil cum nisi odio pariatur commodi perferendis ipsa delectus. Placeat quasi tempora, facere consectetur similique commodi et!</p></div>
-    <script src="https://code.jquery.com/jquery-3.2.1.min.js" ></script>
+            <!-- <div class="hashtag">
+              <div class="hash"> <a href="https://www.instagram.com/explore/tags/ctperu/">#cometoperu</a> </div>
+              <div class="hash"> <a href="https://www.instagram.com/explore/tags/ctperu/">#ctperu</a> </div>
+              <div class="hash"> <a href="https://www.instagram.com/explore/tags/ctperu/">#teamoperudesde</a> </div>
+            </div> -->
+            <div class="wrap-container">
+
+            <div class="special-cards owl-carousel owl-theme">
+                <div class="item card">
+                  <img src="images/pampachiri-apurimac.jpg" alt="">
+                  <a href="#"> <span>Bosque de Piedras de Pampachiri</span> </a>
+                </div>
+                <div class="item card">
+                    <img src="images/pastoruri.jpg" alt="">
+                    <a href="#"> <span>Nevado de Pastoruri</span> </a>
+                </div>
+                <div class="item card">
+                    <img src="images/aguasturquesas.jpg" alt="">
+                    <a href="#"> <span>Huancaya y sus Aguas Turquesa</span> </a>
+                </div>
+                <div class="item card">
+                    <img src="images/gocta.jpg" alt="">
+                    <a href="#"> <span>Cataratas de Gocta</span> </a>
+                </div>
+                <div class="item card">
+                    <img src="images/pacasmayo.jpg" alt="">
+                    <a href="#"> <span>Pacasmayo</span> </a>
+                </div>
+                <div class="item card">
+                  <img src="images/manglares.jpg" alt="">
+                    
+                    <a href="#"> <span>Manglares de Tumbes</span> </a>
+                </div>
+
+            </div>
+
+            </div>
+
+   
+    <script src="https://code.jquery.com/jquery.min.js" ></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" ></script>
     <script src="js/jquery.flexslider-min.js"></script>
-    <script src="js/jquery-ui.js"></script>
+    <script src="js/owl.carousel.js"></script>
+    <script src="js/owl.autoplay.js"></script>
     <script src="js/script.js"></script>
     </body>
 </html>
