--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title></title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="/build/main.css" rel="stylesheet">
+        <link href="main.css" rel="stylesheet">
         <link rel="stylesheet" href="flexslider.css" type="text/css" media="screen" />
 
     </head>
