--- a/index.html
+++ b/index.html
@@ -47,25 +47,21 @@
             <img src="images/paracas.jpg" />
             <div class="flex-caption">
               <p>Islas Ballestas </p>
-              <span>Paracas</span>
+              <a href=""><span>Paracas</span></a>
             </div>
           </li>
           <li>
             <img src="images/arequipa.jpg" />
             <div class="flex-caption">
               <p>Cañon del Colca </p>
-              <span>Arequipa</span>
+              <a href=""><span>Arequipa</span></a>
             </div>
           </li>
         </ul>
       </div>
     </section>
   </div>
-            <!-- <div class="hashtag">
-              <div class="hash"> <a href="https://www.instagram.com/explore/tags/ctperu/">#cometoperu</a> </div>
-              <div class="hash"> <a href="https://www.instagram.com/explore/tags/ctperu/">#ctperu</a> </div>
-              <div class="hash"> <a href="https://www.instagram.com/explore/tags/ctperu/">#teamoperudesde</a> </div>
-            </div> -->
+
   <div class="wrap-container-dvp">
     <div class="special-cards owl-carousel owl-theme">
       <div class="item card">
@@ -95,7 +91,7 @@
     </div>
 
     <div class="dvp-btn">
-      <button> <a href="#"><span> </span> #DatoViajeroPerú</a> </button>
+      <button> <a href="#"><span>#DatoViajeroPerú </span> </a> </button>
     </div>
 
   </div>
@@ -117,7 +113,121 @@
     </div>
   </div>
    
-    <script src="https://code.jquery.com/jquery.min.js" ></script>
+<div class="wrap-container-blog">
+  <h3>Blog @cometoperu</h3>
+
+  <div class="cards">
+
+    <div class="card" href="#">
+      <div class="card-body">
+
+        <div class="card-front">
+        <img src="images/arequipa-sand-board.jpg" alt="">
+        </div>
+
+        <div class="card-back">
+          <div class="back-wrapper">
+            <div class="info-flip-card">
+              <h4>La Libertad</h4> 
+                <p><a href="#"><span>TRUJILLO Y DEPORTES DE AVENTURA EN CONACHE</span> </a></p>    
+            </div>
+
+          </div>
+        </div>
+
+      </div>
+    </div>
+
+    <div class="card" href="#">
+        <div class="card-body">
+  
+          <div class="card-front">
+          <img src="images/museo-cao.jpg" alt="">
+          </div>
+  
+          <div class="card-back">
+            <div class="back-wrapper">
+              <div class="info-flip-card">
+                <h4>La Libertad</h4> 
+                  <p><a href="#"><span>LA LIBERTAD: LA SEÑORA DE CAO</span> </a></p>    
+              </div>
+  
+            </div>
+          </div>
+  
+        </div>
+      </div>
+
+
+    <div class="card" href="#">
+        <div class="card-body">
+          <div class="card-front">
+            <img src="images/museo-inkariy.jpg" alt="">
+        </div>
+        <div class="card-back">
+            <div class="back-wrapper">
+              <div class="info-flip-card">
+                <h4> Cusco</h4>
+                <p><a href=""><span>EL VALLE SAGRADO DE LOS INCAS Y SUS JOYAS</span></a> </p>
+              </div>
+            </div>
+        </div>
+        </div>
+      </div>
+
+      <div class="card" href="#">
+          <div class="card-body">
+            <div class="card-front">
+              <img src="images/pachamanca-cusco.jpg" alt="">
+          </div>
+          <div class="card-back">
+              <div class="back-wrapper">
+                  <div class="info-flip-card">
+                    <h4> Cusco</h4>
+                    <p><a href=""><span>VALLE SAGRADO DE LOS INCAS: OLLANTAYTAMBO Y SUS ALREDEDORES</span></a> </p>
+                  </div>
+                </div>
+          </div>
+          </div>
+        </div>
+
+        <div class="card" href="#">
+            <div class="card-body">
+              <div class="card-front">
+                <img src="images/deportes-aventura-arequipa.jpg" alt="">
+            </div>
+            <div class="card-back">
+                <div class="back-wrapper">
+                    <div class="info-flip-card">
+                      <h4> Arequipa</h4>
+                      <p><a href=""><span>DEPORTES DE AVENTURA EN AREQUIPA</span></a> </p>
+                    </div>
+                  </div>
+            </div>
+            </div>
+          </div>
+
+          <div class="card" href="#">
+              <div class="card-body">
+                <div class="card-front">
+                  <img src="images/rocoto-relleno.jpg" alt="">
+              </div>
+              <div class="card-back">
+                  <div class="back-wrapper">
+                      <div class="info-flip-card">
+                        <h4> Arequipa</h4>
+                        <p><a href=""><span>AREQUIPA: GASTRONOMÍA DE LA CIUDAD BLANCA</span></a> </p>
+                      </div>
+                    </div>
+              </div>
+              </div>
+            </div>
+
+    
+  </div>
+</div>
+
+<script src="https://code.jquery.com/jquery.min.js" ></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" ></script>
     <script src="js/jquery.flexslider-min.js"></script>
     <script src="js/owl.carousel.js"></script>
